changes to pane

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -21,10 +21,10 @@
 
 		  <!-- Tab panes -->
 		  <div class="tab-content">
-		    <div role="tabpanel" class="tab-pane active" id="home">...</div>
-		    <div role="tabpanel" class="tab-pane" id="profile">...</div>
-		    <div role="tabpanel" class="tab-pane" id="messages">...</div>
-		    <div role="tabpanel" class="tab-pane" id="settings">...</div>
+		    <div role="tabpanel" class="tab-pane active" id="home">HOME PANE</div>
+		    <div role="tabpanel" class="tab-pane" id="profile">PROFILE PANE</div>
+		    <div role="tabpanel" class="tab-pane" id="messages">MESSAGES PANE</div>
+		    <div role="tabpanel" class="tab-pane" id="settings">SETTINGS PANE</div>
 		  </div>
 
 		</div>
